[package]
name = "rustLib"
version = "0.1.0"
authors = ["Karthik Rathinavel"]
description = "Sample library in rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/karthikrathinavel/rustlibrary1"
repository = "https://github.com/karthikrathinavel/rustlibrary1"
edition = "2021"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
